Updating DC instance type and adding time for AD services to start

--- a/templates/qs-studioq-main.template.yaml
+++ b/templates/qs-studioq-main.template.yaml
@@ -497,7 +497,7 @@ Resources:
         testusername: !Ref testusername
         testuserpassword: !Ref testuserpassword
         dcAdminPassword: !Ref dcAdminPassword
-        dcInstanceType: "t3.large"
+        dcInstanceType: "m5.large"
         domainName: !Ref domainName
         safeModeAdminPassword: !Ref safeModeAdminPassword
         floatIPs: !GetAtt QSTACK.Outputs.ClusterSecondaryPrivateIPs
