--- a/templates/qs-studioq-main-new-vpc.template.yaml
+++ b/templates/qs-studioq-main-new-vpc.template.yaml
@@ -275,7 +275,7 @@ Parameters:
   publicRemoteCidr:
     AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(3[0-2]|[1-2][0-9]|[0-9]))$"
     Description: "Must be specified as an IPv4 address followed by / and a subnet mask of 0-32. 0.0.0.0/0 (any public source IP can attempt to access the workstation).  
-      If the public source network is not static or is unknown for the clients accessing the workstation, leave the default value of 0.0.0.0/0."
+      If the public source network is not static or is unknown for the clients accessing the workstation, keep the default value of 0.0.0.0/0."
     Type: String
     Default: "0.0.0.0/0"
 
