--- a/templates/cfn/store-secrets.cft.yaml
+++ b/templates/cfn/store-secrets.cft.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: This template stores Secrets for subsequent use in nested stacks
+Description: This template stores Secrets for subsequent use in nested stacks (qs-1s0p493kd)
 
 Parameters:
   SideCarUsername:
