--- a/templates/cfn/provisioning-node.cft.yaml
+++ b/templates/cfn/provisioning-node.cft.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: This template instantiates an EC2 instance for configuration of the Qumulo Cluster and is then shutdown.  Floating IPs, Sidecar role and permissions, SMB share, AD Config, EBS Volume Tagging, and CMK Policy management are all configured.
+Description: This template instantiates an EC2 instance for configuration of the Qumulo Cluster and is then shutdown.  Floating IPs, Sidecar role and permissions, SMB share, AD Config, EBS Volume Tagging, and CMK Policy management are all configured. (qs-1s0p493j3)
 
 Parameters:
   ProvisioningServerAMI:
