--- a/templates/cfn/qiam.cft.yaml
+++ b/templates/cfn/qiam.cft.yaml
@@ -1,9 +1,51 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: This template creates an IAM Profile for subsequent use by the QSTACK template during cluster creation
-
+Description: This template creates an IAM Profile for subsequent use by the QSTACK template during cluster creation (qs-1s0p493jb)
+Parameters:
+  QSS3BucketName:
+    AllowedPattern: ^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$
+    ConstraintDescription: The Quick Start bucket name can include numbers, lowercase
+      letters, uppercase letters, and hyphens (-). It cannot start or end with a 
+      hyphen (-).
+    Default: aws-quickstart
+    Description: Name of the S3 bucket for your copy of the Quick Start assets. 
+      Keep the default name unless you are customizing the template. 
+      Changing the name updates code references to point to a new Quick 
+      Start location. This name can include numbers, lowercase letters, 
+      uppercase letters, and hyphens, but do not start or end with a hyphen (-). 
+      See https://aws-quickstart.github.io/option1.html.
+    Type: String
+  QSS3BucketRegion:
+    Default: us-east-1
+    Description: 'AWS Region where the Quick Start S3 bucket (QSS3BucketName) is 
+    hosted. Keep the default Region unless you are customizing the template. 
+    Changing this Region updates code references to point to a new Quick Start location. 
+    When using your own bucket, specify the Region. 
+    See https://aws-quickstart.github.io/option1.html.'
+    Type: String
+  QSS3KeyPrefix:
+    AllowedPattern: ^[0-9a-zA-Z-/]*$
+    ConstraintDescription: The Quick Start S3 key prefix can include numbers, lowercase letters,
+      uppercase letters, hyphens (-), and forward slashes (/). The prefix should
+      end with a forward slash (/).
+    Default: quickstart-microsoft-sql/
+    Description: S3 key prefix that is used to simulate a directory for your copy of the 
+      Quick Start assets. Keep the default prefix unless you are customizing 
+      the template. Changing this prefix updates code references to point to 
+      a new Quick Start location. This prefix can include numbers, lowercase 
+      letters, uppercase letters, hyphens (-), and forward slashes (/). End with 
+      a forward slash. See https://docs.aws.amazon.com/AmazonS3/latest/dev/UsingMetadata.html 
+      and https://aws-quickstart.github.io/option1.html.
+    Type: String
+Conditions:
+  UsingDefaultBucket: !Equals [!Ref QSS3BucketName, 'aws-quickstart']
 Resources:
   QumuloAccessRole:
     Type: "AWS::IAM::Role"
+    Metadata:
+      cfn-lint:
+        config:
+          ignore_checks:
+            - EIAMPolicyWildcardResource #KMS and EC2 require wildcard access
     Properties:
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
@@ -22,11 +64,73 @@ Resources:
             Statement:
               - Effect: Allow
                 Action:
-                  - "ec2:*"
-                  - "cloudwatch:*"
-                  - "kms:*"
-                  - "s3:*"
+                  - ec2:DescribeInstances
+                  - ec2:DescribeInstanceStatus
+                  - cloudwatch:DeleteAlarms
+                  - cloudwatch:DescribeAlarms
+                  - cloudwatch:EnableInsightRules
+                  - cloudwatch:GetDashboard
+                  - cloudwatch:GetInsightRuleReport
+                  - cloudwatch:GetMetricData
+                  - cloudwatch:GetMetricStatistics
+                  - cloudwatch:GetMetricStream
+                  - cloudwatch:GetMetricWidgetImage
+                  - cloudwatch:ListDashboards
+                  - cloudwatch:ListMetricStreams
+                  - cloudwatch:ListMetrics
+                  - cloudwatch:ListTagsForResource
+                  - cloudwatch:PutAnomalyDetector
+                  - cloudwatch:PutCompositeAlarm
+                  - cloudwatch:PutDashboard
+                  - cloudwatch:PutInsightRule
+                  - cloudwatch:PutMetricAlarm
+                  - cloudwatch:PutMetricData
+                  - cloudwatch:PutMetricStream
+                  - cloudwatch:SetAlarmState
+                  - cloudwatch:StartMetricStreams
+                  - cloudwatch:StopMetricStreams
+                  - cloudwatch:TagResource
+                  - cloudwatch:UntagResource
+                  - kms:CreateAlias
+                  - kms:CreateCustomKeyStore
+                  - kms:CreateGrant
+                  - kms:CreateKey
+                  - kms:Decrypt
+                  - kms:DescribeKey
+                  - kms:EnableKey
+                  - kms:EnableKeyRotation
+                  - kms:Encrypt
+                  - kms:GenerateDataKey
+                  - kms:GenerateDataKeyPair
+                  - kms:GenerateDataKeyPairWithoutPlaintext
+                  - kms:GenerateDataKeyWithoutPlaintext
+                  - kms:GenerateRandom
+                  - kms:GetKeyPolicy
+                  - kms:GetKeyRotationStatus
+                  - kms:GetParametersForImport
+                  - kms:GetPublicKey
+                  - kms:ListAliases
+                  - kms:ListGrants
+                  - kms:ListKeyPolicies
+                  - kms:ListKeys
+                  - kms:ListResourceTags
+                  - kms:ListRetirableGrants
+                  - kms:PutKeyPolicy
+                  - kms:Sign
+                  - kms:TagResource
+                  - kms:Verify
                 Resource: "*"
+        - PolicyName: aws-quick-start-s3-policy
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Action: 
+                  - s3:GetObject
+                  - s3:ListBucket
+                Resource:
+                  - !Sub ['arn:${AWS::Partition}:s3:::${S3Bucket}/${QSS3KeyPrefix}*', S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]]
+                  - !Sub ['arn:${AWS::Partition}:s3:::${S3Bucket}', S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]]
+                Effect: Allow
 
   QumuloAccessProfile:
     Type: "AWS::IAM::InstanceProfile"
