--- a/templates/qs-studioq-main.template.yaml
+++ b/templates/qs-studioq-main.template.yaml
@@ -452,7 +452,7 @@ Resources:
   QIAMSTACK:
     Type: "AWS::CloudFormation::Stack"
     Properties:
-      Parameters:
+#      Parameters:
 #        QSS3BucketName: !Ref QSS3BucketName
 #        QSS3BucketRegion: !Ref QSS3BucketRegion
 #        QSS3KeyPrefix: !Ref QSS3KeyPrefix
