--- a/templates/cfn/qiam.cft.yaml
+++ b/templates/cfn/qiam.cft.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: This template creates an IAM Profile for subsequent use by the QSTACK template during cluster creation (qs-1s0p493jb)
+Description: This template creates an IAM Profile for subsequent use by the QSTACK template during cluster creation
 
 Resources:
   QumuloAccessRole:
@@ -22,10 +22,19 @@ Resources:
             Statement:
               - Effect: Allow
                 Action:
-                  - "ec2:*"
-                  - "cloudwatch:*"
-                  - "kms:*"
-                  - "s3:*"
+                  - "cloudwatch:DeleteAlarms"
+                  - "cloudwatch:PutMetricAlarm"
+                  - "ec2:DescribeInstances"
+                  - "ec2:AssignPrivateIpAddresses"
+                  - "ec2:UnassignPrivateIpAddresses"
+                  - "kms:Decrypt"
+                  - "kms:GenerateDataKeyWithoutPlaintext"
+                  - "kms:ReEncryptFrom"
+                  - "kms:ReEncryptTo"
+                  - "kms:DescribeKey"
+                  - "kms:CreateGrant"
+                  - "logs:PutLogEvents"
+                  - "logs:CreateLogStream"
                 Resource: "*"
 
   QumuloAccessProfile:
