--- a/templates/cfn/security-groups.cft.yaml
+++ b/templates/cfn/security-groups.cft.yaml
@@ -13,6 +13,15 @@ Resources:
  
   AllowInternalSG:
     Type: "AWS::EC2::SecurityGroup"
+    Metadata:
+      cfn_nag:
+        rules_to_suppress:
+          - id: F1000
+            reason: "Standard Amazon practice"
+          - id: W36
+            reason: "Group description is sufficient"
+          - id: W42
+            reason: "Standard Amazon practice"
     Properties:
       GroupDescription: "Allow VPC Internal"
       SecurityGroupIngress:
@@ -24,6 +33,13 @@ Resources:
 
   AllowRdpSG:
     Type: "AWS::EC2::SecurityGroup"
+    Metadata:
+      cfn_nag:
+        rules_to_suppress:
+          - id: F1000
+            reason: "Standard Amazon practice"
+          - id: W36
+            reason: "Group description is sufficient"
     Properties:
       GroupDescription: Allow Teradici PCoIP
       SecurityGroupIngress:
@@ -47,6 +63,13 @@ Resources:
 
   AllowQumuloSG:
     Type: "AWS::EC2::SecurityGroup"
+    Metadata:
+      cfn_nag:
+        rules_to_suppress:
+          - id: F1000
+            reason: "Standard Amazon practice"
+          - id: W36
+            reason: "Group description is sufficient"
     Properties:
       GroupDescription: Allow Qumulo
       SecurityGroupIngress:
