--- a/templates/cfn/provisioning-node.cft.yaml
+++ b/templates/cfn/provisioning-node.cft.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: This template instantiates an EC2 instance for configuration of the Qumulo Cluster and is then shutdown.  Floating IPs, Sidecar role and permissions, SMB share, AD Config, EBS Volume Tagging, and CMK Policy management are all configured. (qs-1s0p493j3)
+Description: This template instantiates an EC2 instance for configuration of the Qumulo Cluster and is then shutdown.  Floating IPs, Sidecar role and permissions, SMB share, AD Config, EBS Volume Tagging, and CMK Policy management are all configured.
 
 Parameters:
   ProvisioningServerAMI:
@@ -126,15 +126,6 @@ Resources:
 
   ProvisionerRole:
     Type: 'AWS::IAM::Role'
-    Metadata:
-      cfn_nag:
-        rules_to_suppress:
-          - id: W11
-            reason: "Policy has been crafted based on least privilege principle"
-          - id: W40
-            reason: "Standard Amazon practice"
-          - id: W5
-            reason: "Standard Amazon practice"
     Properties:
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
@@ -217,6 +208,13 @@ Resources:
             yum install -y jq
             wget --no-check-certificate https://${Node1IP}/static/qq
             chmod 777 ./qq
+            t_name=${StackName}
+            echo $t_name > t_name.txt
+            if [[ "$t_name" =~ "-StudioQStack-" ]]; then
+              top_stackname=$(sed "s/-StudioQStack-.*//g" t_name.txt)
+            else
+              top_stackname=$t_name
+            fi
             aws secretsmanager get-secret-value --secret-id ${SideCarSecretsArn} --region ${Region} --query "SecretString" --output text | jq -r .username > /root/username.txt
             read sc_username < /root/username.txt
             aws secretsmanager get-secret-value --secret-id ${SideCarSecretsArn} --region ${Region} --query "SecretString" --output text | jq -r .password > /root/password.txt
@@ -225,12 +223,8 @@ Resources:
             read ad_username < /root/username.txt
             aws secretsmanager get-secret-value --secret-id ${DomainControllerSecretsArn} --region ${Region} --query "SecretString" --output text | jq -r .dcAdminPassword > /root/password.txt
             read ad_password < /root/password.txt
-            aws secretsmanager get-secret-value --secret-id ${DomainControllerSecretsArn} --region ${Region} --query "SecretString" --output text | jq -r .testUsername > /root/username.txt
-            read qu_username < /root/username.txt
-            aws secretsmanager get-secret-value --secret-id ${DomainControllerSecretsArn} --region ${Region} --query "SecretString" --output text | jq -r .testUserPassword > /root/password.txt
-            read qu_password < /root/password.txt
             rm -f /root/password.txt
-            rm -f /root/password.txt                 
+            rm -f /root/username.txt                 
             ./qq --host ${Node1IP} login -u admin -p "${ClusterPwd}"
             ./qq --host ${Node1IP} network_mod_network --network-id 1 --dns-servers ${dcServerIp} --dns-search-domains "${domainName}"
             until ./qq --host ${Node1IP} network_get_network --network-id 1 | grep -q "${domainName}"; do
@@ -253,9 +247,9 @@ Resources:
             ./qq --host ${Node1IP} auth_modify_role --role $sc_username -G PRIVILEGE_FS_ATTRIBUTES_READ
             ./qq --host ${Node1IP} auth_modify_role --role $sc_username -G PRIVILEGE_NETWORK_READ
             ./qq --host ${Node1IP} auth_assign_role --role $sc_username --trustee $sc_username
-            ./qq --host ${Node1IP} auth_add_user --name $qu_username --primary-group Users -p "$qu_password"
-            ./qq --host ${Node1IP} auth_assign_role --role "Observers" --trustee $qu_username
+            ./qq --host ${Node1IP} auth_assign_role --role "Observers" --trustee "${domainName}\Domain Users"
             ./qq --host ${Node1IP} network_mod_network --network-id 1 --floating-ip-ranges ${FloatIPs}
+            ./qq --host ${Node1IP} time_set --set-use-ad         
             sleep 10
             IFS=', ' read -r -a ec2IDs <<< "${InstanceIDs}"
             for m in "${!!ec2IDs[@]}"; do 
@@ -280,7 +274,7 @@ Resources:
               echo "No CMK specified"
             else
               aws s3 cp s3://${CMKPolicyPath}cfn-init/cmk-policy-skeleton.json /root/add_policy.json
-              aws iam list-roles | grep "IamForDiskRecoveryLambda" | grep "Arn" | grep ${StackName} | grep -o '"arn.*"' | tr -d '"' > /root/arn.txt
+              aws iam list-roles | grep "IamForDiskRecoveryLambda" | grep "Arn" | grep $top_stackname | grep -o '"arn.*"' | tr -d '"' > /root/arn.txt
               cat /root/arn.txt | grep -o ".*/" | tr -d "/" > /root/role.txt
               cat /root/arn.txt | grep -o "/.*" | tr -d "/" > /root/lambda.txt
               sed "s/ROLE/$(cat /root/role.txt)/g" /root/add_policy.json > /root/add_policy2.json
