--- a/templates/cfn/qiam.cft.yaml
+++ b/templates/cfn/qiam.cft.yaml
@@ -1,18 +1,9 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: This template creates an IAM Profile for subsequent use by the QSTACK template during cluster creation (qs-1s0p493jb)
+Description: This template creates an IAM Profile for subsequent use by the QSTACK template during cluster creation
 
 Resources:
   QumuloAccessRole:
     Type: "AWS::IAM::Role"
-    Metadata:
-      cfn-lint:
-        config:
-          ignore_checks:
-            - EIAMPolicyWildcardResource
-      cfn_nag:
-        rules_to_suppress:
-          - id: W11
-            reason: "Policy has been crafted based on least privilege principle"
     Properties:
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
